gros refactor + docs + skin + bordel + des trucs

--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
 </head>
 
 <body>
-	<!-- Pour que ces fils de putes de Chrome nous laissent jouer de l'audio tranquille bordel. -->
 	<div id="intro">
 		<div id="btn-in">Lancer</div>
 	</div>
 	<div class="game-section" id="main-menu" tabindex="0">
+		<div id="menu-audio"></div>
 		<div id="menu-background"></div>
 		<div id="menu-contents">
-			<div id="menu-audio"></div>
-			<div id="menu-title">Projet 927</div>
+			<div id="menu-title">SuperNova</div>
 			<div id="menu-items">
 				<div class="menu-item" menu-action="play">Jouer</div>
 				<div class="menu-item" menu-action="Inventory">Inventaire</div>
@@ -53,7 +52,6 @@
 		<div id="stats-container"></div>
 	</div>
 	<div class="game-section" id="game">
-		<div id="game-background"></div>
 		<div id="scores">
 			<div id="currentscore"></div>
 			<div id="highscore"></div>
@@ -71,5 +69,7 @@
 		</div>
 	</div>
 </body>
+<!-- AVÉ LE CARTOOOOOOOOOOOOON -->
+<!-- https://www.youtube.com/watch?v=q-74HTjRbuY -->
 
 </html>
