--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 	<link href="assets/css/Coin.css" rel="stylesheet" />
 
 	<!-- JAVASCRIPT -->
+	<script src="assets/js/lib.js"></script>
 	<script src="assets/js/Sprite.js"></script>
 	<script src="assets/js/Player.js"></script>
 	<script src="assets/js/Obstacle.js"></script>
 	<script src="assets/js/Coin.js"></script>
-	<script src="assets/js/lib.js"></script>
+	<script src="assets/js/Game.js"></script>
 	<script src="assets/js/stats.js"></script>
-	<script src="assets/js/game.js"></script>
 	<script src="assets/js/menu.js" defer></script>
 	<script src="assets/js/main.js" defer></script>
 </head>
