fix: Transition des scores en lançant depuis le menu

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<div id="stats-container"></div>
 	</div>
 	<div class="game-section" id="game">
-		<div id="scores">
+		<div id="scores" class="hidden">
 			<div id="currentscore"></div>
 			<div id="highscore"></div>
 			<div id="coins">
