refactor: Création de l'AudioManager

--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 
 	<!-- JAVASCRIPT -->
 	<script src="assets/js/lib.js"></script>
+	<script src="assets/js/AudioManager.js"></script>
 	<script src="assets/js/Sprite.js"></script>
 	<script src="assets/js/Player.js"></script>
 	<script src="assets/js/Obstacle.js"></script>
 	<script src="assets/js/Coin.js"></script>
 	<script src="assets/js/Game.js"></script>
 	<script src="assets/js/stats.js"></script>
-	<script src="assets/js/menu.js" defer></script>
 	<script src="assets/js/main.js" defer></script>
+	<script src="assets/js/menu.js" defer></script>
 </head>
 
 <body>
