fix: suppression des objets audios inutiles

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		insérer inventaire
 	</div>
 	<div class="game-section" id="stats">
-		<div id="stats-exit-btn" onclick="switchSection('main-menu')">eeffzfzfez</div>
+		<div id="stats-exit-btn" onclick="switchSection('main-menu')"></div>
 		<div id="stats-title">Statistiques</div>
 		<div id="stats-container"></div>
 	</div>
