--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
 		<title>927</title>
 
 		<!-- CSS -->
+		<link href="assets/css/Coin.css" rel="stylesheet" />
+		<link href="assets/css/game.css" rel="stylesheet" />
+		<link href="assets/css/inventory.css" rel="stylesheet" />
+		<link href="assets/css/InventoryTile.css" rel="stylesheet" />
 		<link href="assets/css/main.css" rel="stylesheet" />
 		<link href="assets/css/menu.css" rel="stylesheet" />
-		<link href="assets/css/inventory.css" rel="stylesheet" />
-		<link href="assets/css/stats.css" rel="stylesheet" />
-		<link href="assets/css/game.css" rel="stylesheet" />
-		<link href="assets/css/Sprite.css" rel="stylesheet" />
-		<link href="assets/css/Player.css" rel="stylesheet" />
 		<link href="assets/css/Obstacle.css" rel="stylesheet" />
-		<link href="assets/css/Coin.css" rel="stylesheet" />
+		<link href="assets/css/Player.css" rel="stylesheet" />
+		<link href="assets/css/Sprite.css" rel="stylesheet" />
+		<link href="assets/css/stats.css" rel="stylesheet" />
 
 		<!-- JAVASCRIPT -->
 		<script src="assets/js/lib.js"></script>
@@ -37,7 +38,7 @@
 		<div id="intro">
 			<div id="btn-in">Lancer</div>
 		</div>
-		<div class="game-section" id="main-menu" tabindex="0">
+		<div class="game-section" id="main-menu">
 			<div id="menu-audio"></div>
 			<div id="menu-background"></div>
 			<div id="menu-contents">
