--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- META -->
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>927</title>
+		<title>Supernova</title>
 
 		<!-- CSS -->
 		<link href="assets/css/Coin.css" rel="stylesheet" />
